# PDF_QA

./: README.md  main.py  pyproject.toml  sample.pkl
